--- a/demo.html
+++ b/demo.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <p>This is a new demo project for github</p>
+    <p>This is a second demo project for github</p>
     
 </body>
 </html>
