--- a/demo.html
+++ b/demo.html
@@ -8,6 +8,7 @@
 <body>
     <p>This is a new demo project for github</p>
     <p>This is a second demo project for github</p>
+    <h1>creating a new branch</h1>
     
 </body>
 </html>
